# TLS-Data-Paper

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
src/dataset_creation_scripts/: requirements.txt
src/dataset_creation_scripts/02_pulse_width_sweep/: README.md  column_info.json  experiment_2_dataset_creation.py  metadata.json
src/dataset_creation_scripts/03_amplitude_control/: README.md  column_info.json  experiment_3_dataset_creation.py  metadata.json
src/dataset_creation_scripts/04_phase_control/: README.md  column_info.json  experiment_4_dataset_creation.py  metadata.json
src/dataset_creation_scripts/05_phase_control_long_spacing/: README.md  column_info.json  experiment_5_dataset_creation.py  metadata.json
src/dataset_creation_scripts/06_floquet/: generate_fig6_dataset.py
src/dataset_creation_scripts/07_perturbation_theory_spectra/: README.md
src/dataset_creation_scripts/08_amplitude_control/: README.md  column_info.json  experiment_8_dataset_creation.py  hamiltonian_generator.py  metadata.json
src/dataset_creation_scripts/09_separation_phase_sweep/: README.md  column_info.json  experiment_9_dataset_creation.py  hamiltonian_generator.py  metadata.json
src/dataset_creation_scripts/10_sharpening_physics/: README.md  column_info.json  experiment_10_dataset_creation.py  hamiltonian_generator.py  metadata.json
src/dataset_creation_scripts/11_temperature_sweep_warmup/: README.md  column_info.json  experiment_11_dataset_creation.py  metadata.json
website/: README.md  build_site.py
(+23 files in other folders)
